<resources>
    <string name="app_name">My Story App</string>
    <string name="title_welcome_page">Welcome to My Story App</string>
    <string name="message_welcome_page">The best online story logging app!!</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Please fill in your personal details!</string>
    <string name="name">Full Name</string>
    <string name="deskripsi_logo">My Story App Logo</string>
    <string name="error_password">Password cannot be less than 8 characters</string>
    <string name="email_hint">Enter your email…</string>
    <string name="password_hint">Enter your password…</string>
    <string name="nama_hint">Enter your full name…</string>
    <string name="email_is_empty">Email is Empty</string>
    <string name="password_is_empty">Password is Empty</string>
    <string name="name_is_empty">Name is Empty</string>
    <string name="an_unknown_error_occurred">An unknown error occurred</string>
    <string name="register_failed">Register Failed</string>
    <string name="register_success">Register Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_success">Login Success</string>
    <string name="name_story">Story Name</string>
    <string name="description">Description</string>
    <string name="story_date">Date</string>
    <string name="load_data_failed">Failed to download data</string>
    <string name="action_logout">Logout</string>
    <string name="action_add">Add Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="desc_hint">Description</string>
    <string name="add_story">Add Story</string>
    <string name="empty_image_warning">Please insert the image file first</string>
    <string name="upload_success">Image Upload Successful</string>
    <string name="title_detail">Story Details</string>
    <string name="invalid_email_error">Invalid email format</string>
    <string name="image">image</string>
    <string name="name_transition">name</string>
    <string name="description_transition">desc</string>
    <string name="date_transition">date</string>
    <string name="action_maps">Maps</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_logout">Are you sure you want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="granted">Permission request granted</string>
    <string name="denied">Permission request denied</string>
    <string name="retry">Try Again</string>
    <string name="input_location">Location</string>
    <string name="failed_location">Location is not found</string>
    <string name="logo_aplikasi">App Logo</string>
    <string name="wait_for_loading">Wait for loading</string>
</resources>